--- a/users_projects/projects/templates/projects/base.html
+++ b/users_projects/projects/templates/projects/base.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <a href="#" class="navbar-brand">All New Projects</a>
+        <a class="navbar-brand" href="{% url 'projects:index' %}">All New Projects</a>
         <div class="navbar">
             <a class="nav-item nav-link" href="{% url 'projects:create_item' %}">Add Item</a>
-            <a class="nav-item nav-link" href="#">Delete Item</a>
+            <!-- <a class="nav-item nav-link" href="#">Delete Item</a> -->
             <a class="nav-item nav-link" href="{% url 'projects:view_item' %}">My Projects</a>
             {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">Logout</a>
@@ -21,19 +21,17 @@
             {% else %}
             <a href="{% url 'login' %}">Login</a>
             {% endif %}
-
         </div>
     </nav>
+    <br>
+    <br>
     {% if messages %}
        {% for message in messages %}
-    <div class="alert alert-{{ message.tags }}">{{ message }}</div>
-
+        <div class="alert alert-{{ message.tags }}">{{ message }}</div>
        {% endfor %}
     {% endif %}
-
-
 {% block body%}
 {% endblock %}
-
+{% include "pagination.html" with page=project_list %}
 </body>
 </html>
