--- a/users_projects/projects/templates/projects/index.html
+++ b/users_projects/projects/templates/projects/index.html
@@ -24,7 +24,6 @@
     </div>
     <div class="col-md-2">
         <a href="{% url 'projects:detail' item.id %}" class="btn btn-success">Details</a>
-
     </div>
 </div>
 
@@ -41,6 +40,6 @@ THis is the old COde
 
         </li>
     </ul>
-
+{% include "pagination.html" with page=project_list %}
 </body>
 </html> 
